# update_sys_installer

./: BUILD.gn  OAT.xml  README.en.md  README.md  bundle.json  sys_installer_default_cfg.gni
common/include/: sys_installer_common.h
frameworks/action_processer/: BUILD.gn
frameworks/action_processer/include/: action_processer.h
frameworks/action_processer/src/: action_processer.cpp
frameworks/actions/include/: iaction.h
frameworks/actions/verify_action/: BUILD.gn
frameworks/actions/verify_action/include/: pkg_verify.h
frameworks/actions/verify_action/src/: pkg_verify.cpp
frameworks/installer_manager/: BUILD.gn
frameworks/installer_manager/include/: installer_manager.h  installer_manager_helper.h  pkg_verify.h  stream_installer_manager.h  stream_installer_manager_helper.h  sys_installer_manager.h  sys_installer_manager_helper.h
frameworks/installer_manager/src/: installer_manager.cpp  installer_manager_helper.cpp  pkg_verify.cpp  stream_installer_manager.cpp  stream_installer_manager_helper.cpp  sys_installer_manager.cpp  sys_installer_manager_helper.cpp
frameworks/ipc_server/: BUILD.gn
frameworks/ipc_server/etc/: BUILD.gn  check_module_update.cfg  module_update_sa.cfg  module_update_service.cfg  sys_installer.cfg  sys_installer.para  sys_installer.para.dac  sys_installer_sa.cfg
frameworks/ipc_server/include/: module_update_service.h  module_update_stub.h  sys_installer_callback_proxy.h  sys_installer_server.h  sys_installer_stub.h
frameworks/ipc_server/sa_profile/: 4101.json  4101.xml  4103.json  BUILD.gn
frameworks/ipc_server/src/: module_update_service.cpp  module_update_stub.cpp  sys_installer_callback_proxy.cpp  sys_installer_server.cpp  sys_installer_stub.cpp
frameworks/status_manager/: BUILD.gn
frameworks/status_manager/include/: status_manager.h  stream_status_manager.h
frameworks/status_manager/src/: status_manager.cpp  stream_status_manager.cpp
interfaces/inner_api/include/: imodule_update.h  isys_installer.h  isys_installer_callback.h  isys_installer_callback_func.h  sys_installer_sa_ipc_interface_code.h
interfaces/innerkits/: sys_installer_common.h
interfaces/innerkits/ipc_client/: BUILD.gn  ISysInstaller.idl  ISysInstallerCallback.idl  Types.idl
interfaces/innerkits/ipc_client/include/: buffer_info_parcel.h  check_module_update.h  module_update_kits.h  module_update_kits_impl.h  module_update_load_callback.h  module_update_proxy.h  sys_installer_callback.h  sys_installer_callback_stub.h  sys_installer_kits.h  sys_installer_kits_impl.h  sys_installer_load_callback.h  sys_installer_proxy.h  sys_installer_task_const.h
interfaces/innerkits/ipc_client/src/: buffer_info_parcel.cpp  check_module_update.cpp  main.cpp  module_update_kits_impl.cpp  module_update_load_callback.cpp  module_update_proxy.cpp  sys_installer_callback.cpp  sys_installer_callback_stub.cpp  sys_installer_client.cpp  sys_installer_kits_impl.cpp  sys_installer_load_callback.cpp  sys_installer_proxy.cpp
services/ab_update/: BUILD.gn
services/ab_update/include/: ab_update.h
services/ab_update/src/: ab_update.cpp
services/module_update/: BUILD.gn  模块升级编译打包和使用指南.md
services/module_update/include/: module_dm.h  module_file_repository.h  module_loop.h  module_update.h  module_update_task.h
services/module_update/service/: BUILD.gn  main.cpp
services/module_update/service/include/: crash_sys_event_listener.h  module_update_consumer.h  module_update_main.h  module_update_producer.h  module_update_queue.h  sys_event_service_listener.h
services/module_update/service/src/: crash_sys_event_listener.cpp  module_update_consumer.cpp  module_update_main.cpp  module_update_producer.cpp  module_update_queue.cpp  sys_event_service_listener.cpp
services/module_update/src/: BUILD.gn  main.cpp  module_dm.cpp  module_file_repository.cpp  module_loop.cpp  module_update.cpp  module_update_task.cpp
services/module_update/util/include/: module_constants.h  module_error_code.h  module_file.h  module_hvb_ops.h  module_hvb_utils.h  module_ipc_helper.h  module_update_verify.h  module_utils.h  module_zip_helper.h
services/module_update/util/src/: module_file.cpp  module_hvb_ops.cpp  module_hvb_utils.cpp  module_ipc_helper.cpp  module_update_verify.cpp  module_utils.cpp  module_zip_helper.cpp
services/stream_update/: BUILD.gn
services/stream_update/include/: stream_update.h
services/stream_update/src/: stream_update.cpp
services/timer/: BUILD.gn
services/timer/include/: sys_installer_timer_base.h  sys_installer_timer_info.h  sys_installer_timer_manager.h
services/timer/src/: sys_installer_timer_info.cpp  sys_installer_timer_manager.cpp
test/fuzztest/: sys_installer_fuzzer.cpp  sys_installer_fuzzer.h
test/fuzztest/fuzztest/imoduleupdate_fuzzer/: imodule_update_fuzzer.cpp  imodule_update_fuzzer.h
test/fuzztest/fuzztest/sysinstaller_fuzzer/: BUILD.gn  sys_installer_fuzzer.cpp
test/fuzztest/imoduleupdate_fuzzer/: BUILD.gn  imodule_update_fuzzer.cpp
test/fuzztest/imoduleupdate_fuzzer/corpus/: init
test/fuzztest/imoduleupdatefuzzer_fuzzer/: BUILD.gn
test/fuzztest/sysinstaller_fuzzer/: BUILD.gn  sys_installer_fuzzer.cpp  sys_installer_fuzzer.h
test/fuzztest/unittest/ipc_test/: sys_installer_ipc_test.cpp  sys_installer_ipc_test.h
test/unittest/: BUILD.gn
test/unittest/ipc_test/: BUILD.gn  sys_installer_ipc_test.cpp  sys_installer_ipc_test.h
test/unittest/stream_update/: BUILD.gn  stream_update_test.cpp  stream_update_test.h
test/unittest/timer_test/: BUILD.gn  timer_info_test.cpp  timer_manager_test.cpp
tools/module_update_tool/: BUILD.gn  main.cpp
tools/zipalign/: BUILD.gn  build_jar.py
tools/zipalign/src/main/java/com/ohos/: ZipAlign.java
