# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_static_library("libstatusmanager") {
  sources = [ "//base/update/sys_installer/frameworks/status_manager/src/status_manager.cpp" ]

  include_dirs = [
    "//base/update/updater/utils/include",
    "//base/update/sys_installer/interfaces/innerkits",
    "//base/update/sys_installer/interfaces/inner_api/include",
    "//base/update/sys_installer/frameworks/status_manager/include",
    "//base/update/sys_installer/include",
    "//base/update/updater/services/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
  ]

  deps = [ "//base/update/updater/services/log:libupdaterlog" ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  part_name = "sys_installer"
}
