# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("utils_exported_header") {
  visibility = [ ":*" ]
  include_dirs = [
    "./util/include",
    "../../../updater/interfaces/kits/include",
    "../../../updater/services/include",
    "../../../updater/utils/include",
    "../../../updater/utils/json",
    "//third_party/cJSON",
    "//third_party/zlib",
    "//third_party/zlib/contrib/minizip",
  ]
}

ohos_static_library("module_update_utils") {
  sources = [
    "./util/src/module_file.cpp",
    "./util/src/module_utils.cpp",
    "./util/src/module_zip_helper.cpp",
  ]

  public_configs = [ ":utils_exported_header" ]

  external_deps = [
    "c_utils:utils",
    "updater:libmiscinfo",
    "updater:libpackageExt",
  ]

  part_name = "sys_installer"
  subsystem_name = "updater"
}

config("module_update_exported_header") {
  visibility = [ ":*" ]
  include_dirs = [ "./include" ]
}

ohos_static_library("module_update_static") {
  sources = [
    "./src/module_dm.cpp",
    "./src/module_file_repository.cpp",
    "./src/module_loop.cpp",
    "./src/module_update.cpp",
  ]

  public_configs = [ ":module_update_exported_header" ]

  public_deps = [ ":module_update_utils" ]

  external_deps = [ "samgr:samgr_common" ]

  part_name = "sys_installer"
  subsystem_name = "updater"
}
