# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "sys_installer/sys_installer_test"

config("utest_config") {
  visibility = [ ":*" ]

  cflags = [
    "-fprofile-arcs",
    "-Wno-implicit-fallthrough",
    "-Wno-unused-function",
  ]
  cflags_cc = [ "-Wno-implicit-fallthrough" ]

  ldflags = [ "--coverage" ]
}

ohos_unittest("sys_installer_unittest") {
  testonly = true
  module_out_path = module_output_path
  sources = [ "ipc_test/sys_installer_ipc_test.cpp" ]

  include_dirs = [
    "//base/update/sys_installer/interfaces/inner_api/include",
    "//base/update/sys_installer/interfaces/innerkits/ipc_client/include",
    "//base/update/sys_installer/test/unitest",
    "//third_party/googletest/googletest/include",
    "//third_party/googletest/googlemock/include",
  ]
  deps = [ "//base/update/sys_installer/interfaces/innerkits/ipc_client:libsysinstallerkits" ]

  deps += [
    "//base/update/sys_installer/test/unittest:sys_installer_client_test",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]

  cflags_cc = [ "-fexceptions" ]

  defines = [
    "UPDATER_UT",
    "BUILD_OHOS",
    "HDC_DEBUG",
    "HARMONY_PROJECT",
  ]

  public_configs = [ ":utest_config" ]
  install_enable = true
  part_name = "sys_installer"
}

ohos_executable("sys_installer_client_test") {
  sources = [ "//base/update/sys_installer/interfaces/innerkits/ipc_client/src/sys_installer_client.cpp" ]

  include_dirs = [
    "//base/update/sys_installer/interfaces/innerkits/ipc_client/include",
    "//base/update/sys_installer/interfaces/inner_api/include",
  ]

  deps = [
    "//base/update/sys_installer/interfaces/innerkits/ipc_client:libsysinstallerkits",
    "//third_party/bounds_checking_function:libsec_static",
  ]

  external_deps = [
    "c_utils:utils",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "startup_l2:syspara",
  ]
  install_enable = true
  part_name = "sys_installer"
}
