# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

ohos_executable("module_update_tool") {
  sources = [ "main.cpp" ]

  include_dirs = [ "../../interfaces/innerkits/ipc_client/include" ]

  deps = [
    "../../interfaces/innerkits/ipc_client:module_update_client",
    "../../services/module_update:module_update_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  ldflags = [ "-Wl -std=c++11" ]

  subsystem_name = "sys_installer"

  part_name = "module_update_tool"
}
