# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/sys_installer/sys_installer_default_cfg.gni")
import("//build/ohos.gni")

sys_installer_path = rebase_path("${sys_installer_absolutely_path}", ".")
ohos_executable("module_update_tool") {
  sources = [ "main.cpp" ]

  include_dirs = [
    "${sys_installer_path}/interfaces/inner_api/include",
    "${sys_installer_path}/interfaces/innerkits/ipc_client/include",
    "${sys_installer_path}/interfaces/innerkits/include",
    "${sys_installer_path}/services/module_update/util/include",
    "//third_party/zlib",
    "//third_party/zlib/contrib/minizip",
  ]

  deps =
      [ "${sys_installer_path}/interfaces/innerkits/ipc_client:module_update" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  ldflags = [ "-Wl -std=c++11" ]

  subsystem_name = "updater"

  part_name = "sys_installer"
}
