# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

action("zipalign") {
  script = "build_jar.py"

  source_file = "./src/main/java/com/ohos/ZipAlign.java"
  cls_out_path = "./build"
  manifest_file = "./build/META-INF/MANIFEST.MF"
  jar_out_path = "../"

  sources = [ "./build" ]
  outputs = [ "$root_build_dir/update/zipalign.jar" ]

  args = [
    "-sf",
    rebase_path(source_file, root_build_dir),
    "-co",
    rebase_path(cls_out_path, root_build_dir),
    "-mf",
    rebase_path(manifest_file, root_build_dir),
    "-jo",
    rebase_path(jar_out_path, root_build_dir),
    "-jn",
    target_name,
  ]
}
