# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/update/sys_installer/sys_installer_default_cfg.gni")
import("//build/ohos.gni")

sys_installer_path = rebase_path("${sys_installer_absolutely_path}", ".")

config("libverifyaction_exported_headers") {
  visibility = [ ":*" ]
  include_dirs = [
    "${sys_installer_path}/frameworks/actions/include",
    "${sys_installer_path}/frameworks/actions/verify_action/include",
    "${sys_installer_path}/frameworks/action_processer/include",
  ]
}
ohos_static_library("libverifyaction") {
  sources = [
    "${sys_installer_path}/frameworks/actions/verify_action/src/pkg_verify.cpp",
  ]

  include_dirs = [
    "${sys_installer_path}/common/include",
    "${sys_installer_path}/interfaces/innerkits",
    "${sys_installer_path}/interfaces/inner_api/include",
    "${sys_installer_path}/frameworks/actions/include",
    "${sys_installer_path}/frameworks/actions/verify_action/include",
    "${sys_installer_path}/frameworks/action_processer/include",
    "${sys_installer_path}/frameworks/status_manager/include",
  ]

  deps = []
  public_configs = [ ":libverifyaction_exported_headers" ]

  external_deps = [
    "hilog:libhilog",
    "ipc:ipc_core",
    "openssl:libcrypto_shared",
    "openssl:libssl_shared",
    "updater:libpackageExt",
    "updater:libringbuffer",
    "updater:libupdaterlog",
  ]
  subsystem_name = "updater"
  part_name = "sys_installer"
}
